fix(FEC-7518): captions container overflows

--- a/src/styles/_shell.scss
+++ b/src/styles/_shell.scss
@@ -8,6 +8,8 @@
   overflow: hidden;
   user-select: none;
   width: 100%;
+  height: 100%;
+  position: relative;
 
   &:-webkit-full-screen {
     width: 100%;
